--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "f3d1c0d0-b028-4da3-98f0-43ba40c438e9"
 authors = ["SergioGmezM", "i62lucum"]
 version = "0.1.0"
 
+[deps]
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1"
 
